--- a/article1.html
+++ b/article1.html
@@ -3,8 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article 1 - Wassim's Blog</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>The Mind's Search for Answers</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        p {
+            color: #555;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .section h2 {
+            border-bottom: 2px solid #333;
+            padding-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -15,12 +34,71 @@
                 <li><a href="article2.html">Article 2</a></li>
             </ul>
         </nav>
+        <h1>The Mind's Search for Answers: How We Find What We Seek (And Why We Might Find the Opposite Instead)</h1>
     </header>
-    <main>
-        <article>
-            <h1>Article 1</h1>
-            <p>This is the content of your first article.</p>
-        </article>
-    </main>
+
+    <div class="section">
+        <h2>The Mind as a Filter: Confirmation Bias and Selective Attention</h2>
+        <p>
+            One of the most powerful forces shaping how we find answers is <strong>confirmation bias</strong>, the tendency to seek, interpret, and remember information that confirms our preexisting beliefs or hypotheses. When we ask a question or set out to solve a problem, our minds naturally gravitate toward evidence that supports our assumptions. This bias acts like a filter, allowing us to focus on certain details while ignoring others.
+        </p>
+        <p>
+            For example, if someone believes that a particular diet is effective, they are likely to notice and remember success stories while dismissing or downplaying evidence to the contrary. This selective attention ensures that the mind finds the answers it is looking for—but it also means that the answers are often shaped by the questions we ask.
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>The Power of Framing: How Questions Shape Answers</h2>
+        <p>
+            The way we frame a question or problem profoundly influences the answers we find. Consider the difference between asking, "Why is this project failing?" and "What can we do to make this project successful?" The first question directs the mind to look for problems, flaws, and obstacles, while the second encourages the mind to seek solutions, opportunities, and strengths. In both cases, the mind will find answers—but the nature of those answers will depend on the framing.
+        </p>
+        <p>
+            This phenomenon is not limited to problem-solving. In scientific research, the hypotheses we formulate determine the kind of data we collect and the conclusions we draw. In everyday life, the questions we ask ourselves—such as "Why am I so unlucky?" versus "What can I do to improve my situation?"—shape our perceptions and actions.
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>The Opposite Perspective: Finding What You're Not Looking For</h2>
+        <p>
+            If the mind is so adept at finding what it seeks, what happens when it looks for the opposite? Interestingly, the same cognitive mechanisms that lead us to confirm our beliefs can also be harnessed to challenge them. By deliberately seeking out opposing viewpoints or contradictory evidence, we can uncover answers that might otherwise remain hidden.
+        </p>
+        <p>
+            For instance, a scientist testing a hypothesis might intentionally design experiments to disprove it, rather than confirm it. This approach, known as <strong>falsification</strong>, helps ensure that the conclusions drawn are robust and reliable. Similarly, in everyday decision-making, asking questions like "What evidence would prove me wrong?" or "How might the opposite of my belief be true?" can lead to more balanced and nuanced understanding.
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>The Role of Curiosity and Open-Mindedness</h2>
+        <p>
+            The mind's ability to find answers—whether confirming or contradictory—depends largely on the attitude with which we approach our search. Curiosity and open-mindedness are essential for breaking free from the constraints of confirmation bias and exploring new possibilities. When we approach a question with genuine curiosity, we are more likely to consider a wide range of perspectives and evidence, rather than simply seeking validation for our preconceptions.
+        </p>
+        <p>
+            Cultivating open-mindedness also involves embracing uncertainty and being willing to change our minds. This can be challenging, as it requires us to confront our own biases and admit when we are wrong. However, the rewards are significant: a more accurate understanding of the world, better decision-making, and the ability to adapt to new information.
+        </p>
+    </div>
+
+    <div class="section">
+        <h2>Practical Applications: Harnessing the Mind's Search Mechanism</h2>
+        <p>
+            Understanding how the mind finds answers has practical implications for various aspects of life:
+        </p>
+        <ul>
+            <li><strong>Critical Thinking</strong>: By being aware of confirmation bias, we can train ourselves to seek out diverse perspectives and question our assumptions.</li>
+            <li><strong>Problem-Solving</strong>: Framing problems in different ways can lead to innovative solutions. For example, asking "What if the opposite were true?" can reveal new approaches.</li>
+            <li><strong>Decision-Making</strong>: Actively looking for evidence that contradicts our preferred choice can help us make more balanced and informed decisions.</li>
+            <li><strong>Learning and Growth</strong>: Embracing curiosity and open-mindedness fosters continuous learning and personal development.</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2>Conclusion: The Mind's Answers Are Shaped by Its Questions</h2>
+        <p>
+            The mind is a powerful tool, but it is not infallible. The answers we find are deeply influenced by the questions we ask, the biases we hold, and the perspectives we choose to explore. By understanding these mechanisms, we can become more intentional in our search for answers—whether we are seeking to confirm our beliefs or challenge them.
+        </p>
+        <p>
+            Ultimately, the mind's ability to find what it seeks is both a strength and a limitation. By cultivating curiosity, open-mindedness, and a willingness to consider the opposite, we can unlock new insights and navigate the complexities of life with greater clarity and wisdom. The next time you search for an answer, ask yourself: What might I find if I looked in the opposite direction? The results might surprise you.
+        </p>
+    </div>
+
 </body>
 </html>
